Implicitly process the pipeline during add, remove and revert

The photos_base_item_operation_add/remove/revert calls are inevitably
followed by photos_base_item_process_async. Make it simpler by calling
photos_base_item_process_async from inside those functions and remove
it from the public API.

https://bugzilla.gnome.org/show_bug.cgi?id=765105