src/photos-application.c
@@ -748,7 +748,7 @@ photos_application_edit_cancel_process (GObject *source_object, GAsyncResult *re
   GError *error = NULL;
   PhotosBaseItem *item = PHOTOS_BASE_ITEM (source_object);
 
-  if (!photos_base_item_process_finish (item, res, &error))
+  if (!photos_base_item_operations_revert_finish (item, res, &error))
     {
       g_warning ("Unable to process item: %s", error->message);
       g_error_free (error);
@@ -768,10 +768,11 @@ photos_application_edit_cancel (PhotosApplication *self)
   item = PHOTOS_BASE_ITEM (photos_base_manager_get_active_object (self->state->item_mngr));
   g_return_if_fail (item != NULL);
 
-  photos_base_item_operations_revert (item);
-
   g_application_hold (G_APPLICATION (self));
-  photos_base_item_process_async (item, NULL, photos_application_edit_cancel_process, self);
+  photos_base_item_operations_revert_async (item,
+                                            NULL,
+                                            photos_application_edit_cancel_process,
+                                            self);
 }
 
 
