src/photos-base-item.h
@@ -197,19 +197,41 @@ void                photos_base_item_open                    (PhotosBaseItem *se
                                                               GdkScreen *screen,
                                                               guint32 timestamp);
 
-void                photos_base_item_operation_add           (PhotosBaseItem *self,
+void                photos_base_item_operation_add_async     (PhotosBaseItem *self,
+                                                              GCancellable *cancellable,
+                                                              GAsyncReadyCallback callback,
+                                                              gpointer user_data,
                                                               const gchar *operation,
                                                               const gchar *first_property_name,
                                                               ...) G_GNUC_NULL_TERMINATED;
+
+gboolean            photos_base_item_operation_add_finish    (PhotosBaseItem *self,
+                                                              GAsyncResult *res,
+                                                              GError **error);
 
 gboolean            photos_base_item_operation_get           (PhotosBaseItem *self,
                                                               const gchar *operation,
                                                               const gchar *first_property_name,
                                                               ...) G_GNUC_NULL_TERMINATED G_GNUC_WARN_UNUSED_RESULT;
 
-gboolean            photos_base_item_operation_remove        (PhotosBaseItem *self, const gchar *operation);
+void                photos_base_item_operation_remove_async  (PhotosBaseItem *self,
+                                                              const gchar *operation,
+                                                              GCancellable *cancellable,
+                                                              GAsyncReadyCallback callback,
+                                                              gpointer user_data);
 
-void                photos_base_item_operations_revert       (PhotosBaseItem *self);
+gboolean            photos_base_item_operation_remove_finish (PhotosBaseItem *self,
+                                                              GAsyncResult *res,
+                                                              GError **error);
+
+void                photos_base_item_operations_revert_async (PhotosBaseItem *self,
+                                                              GCancellable *cancellable,
+                                                              GAsyncReadyCallback callback,
+                                                              gpointer user_data);
+
+gboolean            photos_base_item_operations_revert_finish(PhotosBaseItem *self,
+                                                              GAsyncResult *res,
+                                                              GError **error);
 
 void                photos_base_item_pipeline_save_async     (PhotosBaseItem *self,
                                                               GCancellable *cancellable,
@@ -223,15 +245,6 @@ gboolean            photos_base_item_pipeline_save_finish    (PhotosBaseItem *se
 void                photos_base_item_pipeline_snapshot       (PhotosBaseItem *self);
 
 void                photos_base_item_print                   (PhotosBaseItem *self, GtkWidget *toplevel);
-
-void                photos_base_item_process_async           (PhotosBaseItem *self,
-                                                              GCancellable *cancellable,
-                                                              GAsyncReadyCallback callback,
-                                                              gpointer user_data);
-
-gboolean            photos_base_item_process_finish          (PhotosBaseItem *self,
-                                                              GAsyncResult *res,
-                                                              GError **error);
 
 void                photos_base_item_refresh                 (PhotosBaseItem *self);
 
